Login screen & registration screen funtional implementation and network service refactoring.

--- a/Caploitte-iOS-assignment/Caploitte-iOS-assignment/screens/Authentication/views/Authentication.storyboard
+++ b/Caploitte-iOS-assignment/Caploitte-iOS-assignment/screens/Authentication/views/Authentication.storyboard
@@ -184,7 +184,7 @@
                                     <constraint firstAttribute="height" constant="40" id="Whp-Jb-MvU"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirm password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FYn-3Z-xo8">
                                 <rect key="frame" x="40" y="302.33333333333331" width="139" height="21"/>
